--- a/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
+++ b/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
@@ -10,17 +10,22 @@ body {
 }
 
 .header-container {
-  background-color: #5C687C;
+  background-color: #5c687c;
   display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .logo-container {
   display: flex;
   justify-content: center;
+  order: -1;
 }
 
 .menu-container {
   display: flex;
+  flex-basis: 70%;
+  justify-content: space-between;
 }
 
 .menu-container ul {
