--- a/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
+++ b/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
@@ -41,3 +41,58 @@ body {
   list-style: none;
   margin-right: 10px;
 }
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.movie-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.movie-container h2 {
+  margin: 40px 0;
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-basis: 700px;
+}
+
+.card-container div {
+  align-items: center;
+  background-color: #5c687c;
+  border: black solid 1px;
+  display: flex;
+  height: 150px;
+  justify-content: center;
+  margin: 10px;
+  flex-basis: 16%;
+}
+
+.aside-container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  width: 350px;
+  justify-content: center;
+  align-items: center;
+}
+
+.aside-container h3,
+h4 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.aside-container p {
+  margin: 10px 0;
+  text-align: justify;
+}
